Sonarqubeing all files, 55 issues left